# labmmh

LABS_MatMaHoc/: Cryptography_Labs.md  URLCryptopp.txt  benchmark_log.txt  report_temp.txt  run_all_benchmarks_linux.sh  ~$nal_report_word.docx
LABS_MatMaHoc/LAB01_Tasks/: Task_1_Cryptopp_documentation_guide (1).md  Task_2_CrypyoPP_Library Concepts (2).md  Task_3(all)_4_AES_cryptopp_guide_comandline (2).md  Task_3.1.._Cryptopp_key_save_load_examples (2).md  Task_5._Export to dll_so file (1).md
LABS_MatMaHoc/LAB03_Tasks/: RSA_KetGen.py  guide_1_asn1_syntax_and_key_format (1).md  guide_2_rsa_key_generation.md  guide_3_rsa_encryption.md  guide_4_rsa_decryption.md  guide_5_full_code_implementation.md  guide_6_library_export.md  guide_7_cross_language_integration.md  x509-openssl.txt
LABS_MatMaHoc/LAB04_Tasks/: 03_Cryptoanalysis_hashs (2).docx  2.Cryptoanalysis_hashs.md  Lab 5 Guide Outline.md  Lab 5_R1_Guide_ Hash Functions, Cryptanalysis, and Secure Web Server Setup.md  Lab5_Task3_Secure_apache_Server.md  Lab5_Task4_Hash_Functions.md  apache-https-R1.txt  create_colliding_files.py  hash_bio_example (1).c  hashscli (1).cpp  lab_guide_final.md  lab_guide_section3.md
LABS_MatMaHoc/LAB05_Tasks/: helpers.cpp  key_generation.cpp  keygendll.cpp  keygendll_v1 (1).cpp  main (1).cpp  signing (1).cpp  signing_v1 (1).cpp  verification.cpp  x509_ops.cpp
LABS_MatMaHoc/Lab1/: CMakeLists.txt  benchmark.py  fake_lab2.py  run_benchmarks.ps1  vectors.json
LABS_MatMaHoc/Lab1/benchmarks/: benchmark_16KiB_dec.csv  benchmark_16KiB_enc.csv  benchmark_16KiB_linux_dec.csv  benchmark_16KiB_linux_enc.csv  benchmark_1KiB_dec.csv  benchmark_1KiB_enc.csv  benchmark_1KiB_linux_dec.csv  benchmark_1KiB_linux_enc.csv  benchmark_1MiB_dec.csv  benchmark_1MiB_enc.csv  benchmark_1MiB_linux_dec.csv  benchmark_256KiB_dec.csv  benchmark_256KiB_enc.csv  benchmark_256KiB_linux_dec.csv  benchmark_4KiB_dec.csv  benchmark_4KiB_enc.csv  benchmark_4KiB_linux_enc.csv  benchmark_8MiB_dec.csv  benchmark_8MiB_enc.csv  benchmark_8MiB_linux_enc.csv
LABS_MatMaHoc/Lab1/build_linux/: CMakeCache.txt  Makefile  aestool  cmake_install.cmake
LABS_MatMaHoc/Lab1/src/: AESUtils.cpp  AESUtils.h  Benchmarker.cpp  Benchmarker.h  CipherCore.cpp  CipherCore.h  KATRunner.cpp  KATRunner.h  main.cpp
LABS_MatMaHoc/Lab2/: CMakeLists.txt  Report.md  benchmark2.py  message.txt  run_benchmarks2.ps1  vectors.json
LABS_MatMaHoc/Lab2/benchmarks/: benchmark_100MiB copy.csv  benchmark_100MiB_linux.csv  benchmark_1MiB copy.csv  benchmark_1MiB_linux.csv
LABS_MatMaHoc/Lab2/build_linux/: CMakeCache.txt  Makefile  aestool2  cmake_install.cmake
LABS_MatMaHoc/Lab2/src/: AESCore.cpp  AESCore.h  AESCore_NI.cpp  AESCore_NI.h  AES_CTR.cpp  AES_CTR.h  AES_XTS.cpp  AES_XTS.h  Benchmarker.cpp  KATRunner.cpp  main.cpp
LABS_MatMaHoc/Lab3/: CMakeLists.txt  hybrid_benchmark.csv  rsa_3072_benchmark.csv  rsa_4096_benchmark.csv
LABS_MatMaHoc/Lab3/build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake  rsatool
LABS_MatMaHoc/Lab3/src/: benchmarker.cpp  benchmarker.h  rsa_decrypt.cpp  rsa_decrypt.h  rsa_encrypt.cpp  rsa_encrypt.h  rsa_keygen.cpp  rsa_keygen.h  rsatool.cpp  utils.cpp  utils.h
LABS_MatMaHoc/Lab3/tests/: run_tests.ps1
LABS_MatMaHoc/Lab4/: CMakeLists.txt  Lab4_Task1_HashSuite.cpp  Lab4_Task2_X509.cpp  Lab4_Task5_Benchmark.cpp  Lab4_Task6A_LenExt.cpp  Report.md  hashing_benchmark_1MB.csv  nginx_tls.conf  plot_benchmark.py
LABS_MatMaHoc/Lab4/build_linux/: CMakeCache.txt  Lab4_Task1_HashSuite  Lab4_Task2_X509  Lab4_Task5_Benchmark  Lab4_Task6A_LenExt  Makefile  cmake_install.cmake
LABS_MatMaHoc/Lab5/: CMakeLists.txt  Lab5_Benchmark.cpp  Lab5_SigTool.cpp  Negative_Tests.md  plot_benchmark.py  test_lab5.py
LABS_MatMaHoc/Lab5/build_linux/: CMakeCache.txt  Makefile  cmake_install.cmake
LABS_MatMaHoc/Lab6/: CMakeLists.txt  Lab6_Benchmark.cpp  Lab6_Report.md  README.md  cert_demo.cpp  plot_benchmark.py  pqtool.cpp  test_negative.py
LABS_MatMaHoc/global_benchmark_results/: Lab1_benchmark_1MiB_linux_enc.csv  Lab1_benchmark_256KiB_linux_enc.csv  Lab1_benchmark_4KiB_linux_dec.csv  Lab1_benchmark_8MiB_linux_dec.csv  Lab2_benchmark_100MiB_linux_dec.csv  Lab2_benchmark_1MiB_linux_dec.csv  hashing_benchmark_100MB_linux.csv  rsa_3072_benchmark_linux.csv
LABS_MatMaHoc/temp_cmake/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
